--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <!-- </div> -->
 
             <div class="content has-text-justified" style="margin-top: 15px;">
-              Visualization comparison of SpectralFlow (top row) with <a href="https://github.com/JarrentWu1031/AnimateAnyMesh/tree/main" target="_blank">AnimateAnyMesh</a> (middle row) and <a href="https://github.com/yanqinJiang/Animate3D" target="_blank">Animate3D</a> (bottom row).
+              Visualization comparison of SpectralFlow (top row) with <a href="https://github.com/JarrentWu1031/AnimateAnyMesh/tree/main" target="_blank"><b>AnimateAnyMesh</b></a> (middle row) and <a href="https://github.com/yanqinJiang/Animate3D" target="_blank"><b>Animate3D</b></a> (bottom row).
             </div>
 
                 
