--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="./static/js/bulma-carousel.min.js"></script>
     <script src="./static/js/bulma-slider.min.js"></script>
     <script src="./static/js/fontawesome.all.min.js"></script>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
 </head>
 
 
@@ -150,6 +151,27 @@
         </div>
     </div>
 </section>
+
+
+ <p class="title is-3 mt-5 has-text-centered"> Mesh Animations </p>
+    <p class="content has-text-centered is-size-5">
+      <!-- The following results are animated by <a href="https://www.mixamo.com/">Mixamo</a>. -->
+    </p>
+    <div class="level">
+      <div class="level-item">
+        <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="1.0 1.0 1.0"></model-viewer>
+      </div>
+      <div class="level-item">
+        <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb" style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="1.0 1.0 1.0"></model-viewer>
+      </div>
+      <div class="level-item">
+        <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="1.0 1.0 1.0"></model-viewer>
+      </div>
+      <div class="level-item">
+        <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb" style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="1.0 1.0 1.0"></model-viewer>
+      </div>
+    </div>
+
 
 <section class="hero teaser is-light is-small">
     <div class="hero-body">
