--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <p class="title">Mesh Animations</p>
 
   <div class="viewer-grid">
-    <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb" autoplay camera-controls shadow-intensity="1" touch-action="pan-y"></model-viewer>
+    <model-viewer src="./static/glb/bulldog.glb" autoplay camera-controls shadow-intensity="1" touch-action="pan-y"></model-viewer>
     <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb" autoplay camera-controls shadow-intensity="1" touch-action="pan-y"></model-viewer>
     <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb" autoplay camera-controls shadow-intensity="1" touch-action="pan-y"></model-viewer>
     <model-viewer src="./static/glb/deformed_control_smooth_pig_2_refine_pig_2.glb" autoplay camera-controls shadow-intensity="1" touch-action="pan-y"></model-viewer>
