--- a/index.html
+++ b/index.html
@@ -243,16 +243,16 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer src="./static/animations/bulldog.glb" poster="./static/animations/bulldog.png" style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="0.8 0.8 0.8"></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 0deg 2.5m"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb" poster="./static/animations/bulldog.png" style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="1.2 1.2 1.2"></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" ></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb" poster="./static/animations/bulldog.png" style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" scale="0.6 0.6 0.6"></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" ></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb" poster="./static/animations/bulldog.png" style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none"></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none"></model-viewer>
       </div>
     </div>
 
