--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 0deg 2.5m"></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="0 -1.57 0 "></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" ></model-viewer>
