--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   
       gtag('config', 'G-PYVRSFMDRL');
     </script>
-  
+        window.addEventListener('beforeunload', () => {
+          localStorage.clear();
+          sessionStorage.clear();
+      });
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
           rel="stylesheet">
   
@@ -126,7 +130,7 @@
       }
   
       canvas {
-          width: 100%;
+          width: 80%;
           height: auto;
           background-color: #fff;
       }
@@ -243,16 +247,16 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 0deg auto"></model-viewer>
-      </div>
-      <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg -90deg auto"></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
+      </div>
+      <div class="level-item">
+        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto" ></model-viewer>
       </div>
     </div>
 
