--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
   </div>
 
-
+  <div class="container is-max-desktop has-text-centered">
  
      <!-- abstract -->
      <p class="title is-3 mt-5 has-text-centered"> Abstract </p>
@@ -281,7 +281,7 @@
   </div> -->
 
 
-
+</div>
 
   </section>
 </body>
