--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <div class="container has-text-centered">
     <!-- <div class="container is-max-desktop"> -->
     <!-- paper title -->
-    <p  class="title is-3 publication-title"> SpectralFlow: Geometry-Aware Mesh Animation via Spectral Coefficient Diffusion </p>
+    <p  class="title is-3 publication-title"> SpectralFlow: Geometry-Aware Mesh Animation </br> via Spectral Coefficient Diffusion </p>
     <!-- publication -->
    
    
@@ -267,31 +267,35 @@
         <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto" ></model-viewer>
       </div>
     </div>
-
     <script type="module">
-      const viewer = document.getElementById('viewer');
-
-      viewer.addEventListener('load', () => {
-        const materialColor = getRandomColor();
-
+ 
+      window.addEventListener('DOMContentLoaded', () => {
         
-        const materials = viewer.model?.materials || [];
-        for (const material of materials) {
-          if (material.pbrMetallicRoughness) {
-            material.pbrMetallicRoughness.setBaseColorFactor(materialColor);
-          }
-        }
-      });
+        const viewers = document.querySelectorAll('model-viewer');
+
+  
+        viewers.forEach((viewer) => {
+          viewer.addEventListener('load', () => {
+            const materialColor = getRandomColor();
+
+            const materials = viewer.model?.materials || [];
+            for (const material of materials) {
+              if (material.pbrMetallicRoughness) {
+                material.pbrMetallicRoughness.setBaseColorFactor(materialColor);
+              }
+            }
+          });
+        });
 
      
-      function getRandomColor() {
-        const r = Math.random();
-        const g = Math.random();
-        const b = Math.random();
-        return [r, g, b, 1]; // 最后一个 1 是 alpha 透明度
-      }
+        function getRandomColor() {
+          const r = Math.random();
+          const g = Math.random();
+          const b = Math.random();
+          return [r, g, b, 1]; 
+        }
+      });
     </script>
-
 </div>
 
   </section>
