--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="SpectalFlow">
     <meta name="keywords" content="4D content, Diffusion">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SpectralFlow: Geometry-Aware Mesh Animation </br> via Spectral Coefficient Diffusion </title>
+    <title>SpectralFlow: Geometry-Aware Mesh Animation <br> via Spectral Coefficient Diffusion </title>
   
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -219,7 +219,7 @@
   <div class="container has-text-centered">
     <!-- <div class="container is-max-desktop"> -->
     <!-- paper title -->
-    <p  class="title is-3 publication-title"> SpectralFlow: Geometry-Aware Mesh Animation </br> via Spectral Coefficient Diffusion </p>
+    <p  class="title is-3 publication-title"> SpectralFlow: Geometry-Aware Mesh Animation <br> via Spectral Coefficient Diffusion </p>
     <!-- publication -->
    
    
