--- a/index.html
+++ b/index.html
@@ -267,7 +267,35 @@
         <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto" ></model-viewer>
       </div>
     </div>
-<script type="module">
+
+    <model-viewer id="viewer"
+      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+      style="width: 100%; height: 500px;"
+      autoplay
+      shadow-intensity="1"
+      camera-controls
+      touch-action="none"
+      camera-orbit="90deg 90deg auto">
+    </model-viewer>
+
+    <script type="module">
+      const viewer = document.getElementById('viewer');
+
+      viewer.addEventListener('load', () => {
+        const model = viewer.model;
+        console.log('Loaded model:', model);
+
+        const materialColor = [1, 0, 0, 1]; // 红色
+
+        const materials = model?.materials || [];
+        for (const material of materials) {
+          if (material.pbrMetallicRoughness) {
+            material.pbrMetallicRoughness.setBaseColorFactor(materialColor);
+          }
+        }
+      });
+    </script>
+<!-- <script type="module">
   window.addEventListener('DOMContentLoaded', () => {
     const viewers = document.querySelectorAll('model-viewer');
 
@@ -311,7 +339,7 @@
       return [r, g, b, 1];
     }
   });
-</script>
+</script> -->
 </div>
 
   </section>
