--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
+        <model-viewer id="pig1" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
+        <model-viewer id="pig2" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
@@ -268,32 +268,34 @@
       </div>
     </div>
 
-    <model-viewer id="viewer"
-      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-      style="width: 100%; height: 500px;"
-      autoplay
-      shadow-intensity="1"
-      camera-controls
-      touch-action="none"
-      camera-orbit="90deg 90deg auto">
-    </model-viewer>
 
     <script type="module">
-      const viewer = document.getElementById('viewer');
+      const colors = {
+        pig1: [0.95, 0.8, 0.85, 1], // 低饱和度粉色
+        pig2: [0.95, 0.8, 0.6, 1],  // 低饱和度橘黄
+      };
 
-      viewer.addEventListener('load', () => {
-        const model = viewer.model;
-        console.log('Loaded model:', model);
+      for (const [id, color] of Object.entries(colors)) {
+        const viewer = document.getElementById(id);
 
-        const materialColor = [1, 0, 0, 1]; // 红色
-
-        const materials = model?.materials || [];
-        for (const material of materials) {
-          if (material.pbrMetallicRoughness) {
-            material.pbrMetallicRoughness.setBaseColorFactor(materialColor);
-          }
+        if (!viewer) {
+          console.warn(`No model-viewer with id "${id}" found.`);
+          continue;
         }
-      });
+
+        viewer.addEventListener('load', () => {
+          const model = viewer.model;
+          console.log(`Loaded model: ${id}`, model);
+
+          const materials = model?.materials || [];
+          for (const material of materials) {
+            if (material.pbrMetallicRoughness) {
+              material.pbrMetallicRoughness.baseColorTexture = null;
+              material.pbrMetallicRoughness.setBaseColorFactor(color);
+            }
+          }
+        });
+      }
     </script>
 <!-- <script type="module">
   window.addEventListener('DOMContentLoaded', () => {
