--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer id="pig1" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
+        <model-viewer id="pig" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer id="pig2" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
+        <model-viewer id="horse" src="./static/animationsdeformed_control_smooth_horse_6_refine_horse_6_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="90deg 90deg auto"></model-viewer>
@@ -271,8 +271,8 @@
 
     <script type="module">
       const colors = {
-        pig1: [0.95, 0.8, 0.85, 1], // 低饱和度粉色
-        pig2: [0.95, 0.8, 0.6, 1],  // 低饱和度橘黄
+        pig: [0.95, 0.8, 0.85, 1], // 低饱和度粉色
+        horse: [0.95, 0.8, 0.6, 1],  // 低饱和度橘黄
       };
 
       for (const [id, color] of Object.entries(colors)) {
