--- a/index.html
+++ b/index.html
@@ -297,47 +297,49 @@
         });
       }
     </script> -->
-    <script type="module">
-    const colors = {
-      pig: [0.95, 0.8, 0.85, 1],   // 低饱和度粉色
-      horse: [0.95, 0.8, 0.2, 1], // 低饱和度橘黄
-    };
+<script type="module">
+  const colors = {
+    pig: [0.95, 0.8, 0.85, 1],   // 低饱和度粉色
+    horse: [0.95, 0.8, 0.2, 1], // 低饱和度橘黄
+  };
 
-    Object.entries(colors).forEach(([id, color]) => {
-      const viewer = document.getElementById(id);
+  Object.entries(colors).forEach(([id, color]) => {
+    const viewer = document.getElementById(id);
 
-      if (!viewer) {
-        console.warn(`⚠️ model-viewer with id "${id}" not found.`);
+    if (!viewer) {
+      console.warn(`⚠️ model-viewer with id "${id}" not found.`);
+      return;
+    }
+
+    viewer.addEventListener('load', () => {
+      const model = viewer.model;
+
+      if (!model) {
+        console.warn(`⚠️ model-viewer "${id}" has no loaded model.`);
         return;
       }
 
-      viewer.addEventListener('load', () => {
-        const model = viewer.model;
+      const materials = model.materials || [];
 
-        if (!model) {
-          console.warn(`⚠️ model-viewer "${id}" has no loaded model.`);
-          return;
+      if (materials.length === 0) {
+        console.warn(`⚠️ model "${id}" has no materials.`);
+        return;
+      }
+
+      console.log(`✅ Setting color for "${id}"`, color);
+
+      for (const material of materials) {
+        if (material.pbrMetallicRoughness) {
+          // 移除贴图，避免影响颜色
+          material.pbrMetallicRoughness.baseColorTexture = null;
+
+          // ✅ 正确设置颜色
+          material.pbrMetallicRoughness.baseColorFactor = color;
         }
-
-        const materials = model.materials || [];
-
-        if (materials.length === 0) {
-          console.warn(`⚠️ model "${id}" has no materials.`);
-          return;
-        }
-
-        console.log(`✅ Setting color for "${id}"`, color);
-
-        for (const material of materials) {
-      
-          if (material.pbrMetallicRoughness) {
-            material.pbrMetallicRoughness.baseColorTexture = null;
-            material.pbrMetallicRoughness.setBaseColorFactor(color);
-          }
-        }
-      });
+      }
     });
-  </script>
+  });
+</script>
 <!-- <script type="module">
   window.addEventListener('DOMContentLoaded', () => {
     const viewers = document.querySelectorAll('model-viewer');
