--- a/index.html
+++ b/index.html
@@ -255,16 +255,16 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer id="pig" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb?v=1"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+        <model-viewer id="pig" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer id="horse" src="./static/animations/deformed_control_smooth_horse_6_refine_horse_6_with_material.glb?v=1"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+        <model-viewer id="horse" src="./static/animations/deformed_control_smooth_horse_6_refine_horse_6_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+        <model-viewer id="id3" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+        <model-viewer id="id4" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
     </div>
 
@@ -299,8 +299,8 @@
     </script> -->
 <script type="module">
   const colors = {
-    pig: [0.95, 0.8, 0.85, 1],   // 低饱和度粉色
-    horse: [0.95, 0.8, 0.2, 1], // 低饱和度橘黄
+    pig: [0.95, 0.8, 0.2, 1],   // 低饱和度粉色
+    horse: [0.95, 0.8, 0.85, 1], // 低饱和度橘黄
   };
 
   Object.entries(colors).forEach(([id, color]) => {
@@ -332,8 +332,6 @@
         if (material.pbrMetallicRoughness) {
           // 移除贴图，避免影响颜色
           material.pbrMetallicRoughness.baseColorTexture = null;
-
-          // ✅ 正确设置颜色
           material.pbrMetallicRoughness.baseColorFactor = color;
         }
       }
