--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         });
       }
     </script> -->
-<script type="module">
+<!-- <script type="module">
   const colors = {
     pig: [1, 0, 0, 1],   // 低饱和度粉色
     horse: [0.95, 0.8, 0.85, 1], // 低饱和度橘黄
@@ -337,7 +337,7 @@
       }
     });
   });
-</script>
+</script> -->
 <!-- <script type="module">
   window.addEventListener('DOMContentLoaded', () => {
     const viewers = document.querySelectorAll('model-viewer');
