--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
     </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer id="pig" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+        <model-viewer id="pig" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2_clean.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer id="horse" src="./static/animations/deformed_control_smooth_horse_6_refine_horse_6_with_material.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+        <model-viewer id="horse" src="./static/animations/deformed_control_smooth_horse_6_refine_horse_6_clean.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer id="id3" src="./static/animations/deformed_control_smooth_pig_2_refine_pig_2.glb"  style="width: 100%; height: 650px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
@@ -269,7 +269,7 @@
     </div>
 
 
-    <!-- <script type="module">
+    <script type="module">
       const colors = {
         pig: [0.95, 0.8, 0.85, 1], // 低饱和度粉色
         horse: [0.95, 0.8, 0.6, 1],  // 低饱和度橘黄
@@ -296,47 +296,47 @@
           }
         });
       }
-    </script> -->
-<!-- <script type="module">
-  const colors = {
-    pig: [1, 0, 0, 1],   // 低饱和度粉色
-    horse: [0.95, 0.8, 0.85, 1], // 低饱和度橘黄
-  };
+    </script>
+  <!-- <script type="module">
+    const colors = {
+      pig: [1, 0, 0, 1],   // 低饱和度粉色
+      horse: [0.95, 0.8, 0.85, 1], // 低饱和度橘黄
+    };
 
-  Object.entries(colors).forEach(([id, color]) => {
-    const viewer = document.getElementById(id);
+    Object.entries(colors).forEach(([id, color]) => {
+      const viewer = document.getElementById(id);
 
-    if (!viewer) {
-      console.warn(`⚠️ model-viewer with id "${id}" not found.`);
-      return;
-    }
-
-    viewer.addEventListener('load', () => {
-      const model = viewer.model;
-
-      if (!model) {
-        console.warn(`⚠️ model-viewer "${id}" has no loaded model.`);
+      if (!viewer) {
+        console.warn(`⚠️ model-viewer with id "${id}" not found.`);
         return;
       }
 
-      const materials = model.materials || [];
+      viewer.addEventListener('load', () => {
+        const model = viewer.model;
 
-      if (materials.length === 0) {
-        console.warn(`⚠️ model "${id}" has no materials.`);
-        return;
-      }
-
-      console.log(`✅ Setting color for "${id}"`, color);
-
-      for (const material of materials) {
-        if (material.pbrMetallicRoughness) {
-  
-          material.pbrMetallicRoughness.setTexture('baseColorTexture', null);
-          material.pbrMetallicRoughness.baseColorFactor = color;
+        if (!model) {
+          console.warn(`⚠️ model-viewer "${id}" has no loaded model.`);
+          return;
         }
-      }
+
+        const materials = model.materials || [];
+
+        if (materials.length === 0) {
+          console.warn(`⚠️ model "${id}" has no materials.`);
+          return;
+        }
+
+        console.log(`✅ Setting color for "${id}"`, color);
+
+        for (const material of materials) {
+          if (material.pbrMetallicRoughness) {
+    
+            material.pbrMetallicRoughness.setTexture('baseColorTexture', null);
+            material.pbrMetallicRoughness.baseColorFactor = color;
+          }
+        }
+      });
     });
-  });
 </script> -->
 <!-- <script type="module">
   window.addEventListener('DOMContentLoaded', () => {
