--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
         <model-viewer id="id4" src="./static/animations/tapir_attack_run_op.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer id="id4" src="./static/animations/pig_tail1_bp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+        <model-viewer id="id4" src=  style="./static/animations/goat0_bp.glb"  "width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
        <div class="level-item">
-        <model-viewer id="id4" src="./static/animations/dog4_oy.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+        <model-viewer id="id4" src="./static/animations/moose_oy.glb"   style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer id="horse" src="./static/animations/tapir1_cg.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
@@ -290,13 +290,13 @@
      <div class="level">
       
       <div class="level-item">
-        <model-viewer id="horse" src="./static/animations/goat0_bp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+        <model-viewer id="horse" src="./static/animations/pig_tail1_bp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer id="id3" src="./static/animations/lamb28_pp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer id="id4" src="./static/animations/moose_oy.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+        <model-viewer id="id4" src="./static/animations/dog4_oy.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer id="pig" src="./static/animations/mouse2_op.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
