--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <model-viewer id="id4" src="./static/animations/tapir_attack_run_op.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer id="id4" src=  style="./static/animations/goat0_bp.glb"  "width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+        <model-viewer id="id4" src="./static/animations/goat0_bp.glb"   style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       </div>
        <div class="level-item">
         <model-viewer id="id4" src="./static/animations/moose_oy.glb"   style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
