--- a/index.html
+++ b/index.html
@@ -361,8 +361,9 @@
         <a> Meshes extraction from images. </a>
   </p>
     <div class="level">
-      <div class="level-item">
-        <div class="card-wrapper">
+      <div class="level-item" style="text-align: center; margin-left: -10px;">
+        <!-- <div class="card-wrapper"> -->
+          <div style="width: 200px;">
           <model-viewer id="pig" src="./static/animations/animal3d/225264_zebra_drink_op.glb"  style="width: 135%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-60deg 90deg auto"></model-viewer>
           <p > drink </p>
         </div>
